--- a/mohea/resources/sass/_main.scss
+++ b/mohea/resources/sass/_main.scss
@@ -603,14 +603,27 @@ footer {
 
         +.footer-links {
             position: absolute;
-            bottom: 20px;
+            bottom: 0px;
             width: 100%;
+            padding: 20px 0px;
             display: flex;
             justify-content: center;
             align-items: flex-end;
             font-size: 10pt;
             text-align: center;
             color: #ffffff;
+            transition: background-color 0.2s;
+
+            &:hover,
+            &:focus,
+            &:focus-within {
+                background-color: rgba(0, 0, 0, 0.8);
+            }
+
+            .link:hover::after,
+            .link:focus::after {
+                background: #ffffff;
+            }
 
             a,
             span {
@@ -837,7 +850,7 @@ a {
     text-align: center;
     background-color: #F2F2F2;
     color: #000000 !important;
-    border: none;
+    border: 3px solid #ffffff;
     border-radius: 30px;
 
     &:hover,
